# Viral-Marketing

./: .gitignore  README.md  pyproject.toml
apps/banking/: admin.py  models.py  serializers_accounts.py  serializers_transactions.py  tests.py  urls.py  views_accounts.py  views_transactions.py
apps/banking/migrations/: 0001_initial.py  0002_remove_account_uq_bank_acct_and_more.py  0003_alter_account_account_type_alter_account_bank_code_and_more.py  0004_alter_account_options_and_more.py
apps/users/: admin.py  auth.py  models.py  serializers.py  serializers_auth.py  serializers_profile.py  tokens.py  urls.py  views.py  views_auth.py  views_profile.py
apps/users/migrations/: 0001_initial.py  0002_remove_user_users_email_4b85f2_idx_and_more.py
config/: urls.py
config/settings/: dev.py  prod.py
docs/: auth_register_flow.mmd  auth_session_flow.mmd  erd.mmd
